# OneCollarFirmwareV2

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.rev6  sdkconfig.defaults.rev7
.claude/: architecture.md  conventions.md  hardware.md
.claude/skills/esp32-panic-decode/: SKILL.md
.claude/skills/firmware-engineer-framing/: SKILL.md
boards/rev6/: board.h  board_config.cmake
boards/rev7/: board.h  board_config.cmake
components/nanopb/: CMakeLists.txt
docs/: 01_product_vision.md  02_onecollar_technical_architecture.md  08_kickoff_brief.md  09_behavior_literature_synthesis.md  10_rev6_bringup_log.md
main/: CMakeLists.txt  bringup_rev6.c  data_logger.c  data_logger.h  i2c_bus.c  i2c_bus.h  idf_component.yml  imu_sampler.c  imu_sampler.h  main.c
main/ble/: ble_protocol.pb.c  ble_protocol.pb.h
main/drivers/: audio_i2s_mems.c  audio_iface_stub.c  ble_service.c  ble_service.h  fuel.h  fuel_max17048.c  gps.h  gps_neo_m8q.c  highg_iface_stub.c  imu_lsm6dso32x.c  imu_lsm6dsv320x.c  lora.h  lora_rfm95w.c  power.c  power.h  sflp_iface_stub.c
main/hal/: audio_iface.h  highg_iface.h  imu_iface.h  sflp_iface.h
models/rev6/: README.md
models/rev7/: README.md
tools/: imu_viz.py  imu_viz_3d.py
